Added GUI for /sportals list command.